Fixing overflow x hidden

--- a/book.css
+++ b/book.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .container-content{
     margin-top:80px;display: flex;justify-content: center;
 }
